--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,6 +37,9 @@
         .pw-main {
           flex: 0 0 100%;
           max-width: 100%;
+          padding-left: 5px;
+          padding-right: 5px;
+          box-sizing: border-box;
         }
       }
     </style>
