--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,9 +37,8 @@
         .pw-main {
           flex: 0 0 100%;
           max-width: 100%;
-        }
-        .pw-content-pad{ 
-          padding: 0 10px;
+          padding-left: 10px;
+          padding-right: 10px;
           box-sizing: border-box;
         }
       }
@@ -66,9 +65,7 @@
         </aside>
 
         <main class="pw-main">
-          <div class="pw-content-pad">
-            {{ content }}
-          </div>
+          {{ content }}
         </main>
       </section>
 
