--- a/docs/_includes/sidebar.html
+++ b/docs/_includes/sidebar.html
@@ -2,11 +2,10 @@
   <h3>Chapters</h3>
   <ul>
     {% for item in site.data.nav %}
-      {% assign item_slash = item.url | append: "/" %}
       <li>
         <a href="{{ item.url | relative_url }}"
-           {% if page.url == item.url or page.url == item_slash %}style="font-weight:700"{% endif %}>
-          {{ item.label }}
+           {% if page.url == item.url or page.url == item.url | append:'/' %}style="font-weight:700"{% endif %}>
+          {{ item.title }}
         </a>
       </li>
     {% endfor %}
