--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
+  {% include ga.html %}
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
