--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -114,8 +114,8 @@
       }
 
       .pw-sidebar {
-        flex: 1 0 100%;
-        max-width: 100%;
+        display: none !important;
+        /* HIDE SIDEBAR BELOW 1200PX */
       }
 
       .pw-main {
