--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
     body {
       margin: 0 !important;
       padding: 0 !important;
-      background-color: #f4f1e1 !important;
+      background-color: #D6F576 !important;
       /* Theme beige */
     }
 
@@ -38,8 +38,7 @@
     /* 2. Full-Width Title Banner */
     header {
       width: 100% !important;
-      background: #5d74af !important;
-      /* Your blue color */
+      background: #7B5BF5 !important;
       color: #fff !important;
       margin: 0 !important;
       padding: 50px 0 !important;
