--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -38,7 +38,7 @@
     /* 2. Full-Width Title Banner */
     header {
       width: 100% !important;
-      background: #7B5BF5 !important;
+      background: #4B2FAE !important;
       color: #fff !important;
       margin: 0 !important;
       padding: 50px 0 !important;
