--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,8 +16,8 @@
     body {
       margin: 0 !important;
       padding: 0 !important;
-      background-color: #D6F576 !important;
-      /* Theme beige */
+      background-color: #f4f1e1 !important;
+      /* Theme beige (for Stremio Green: #D6F576) */
     }
 
     /* 1. FLEXBOX CENTERING HAMMER */
